syntax = "proto3";

package storagepb;

import "google/protobuf/timestamp.proto";
import "storagepb/dao.proto";

option go_package = ".;storagepb";

service Delegate {
  // GetDelegates returns list of delegates get from Snapshot
  rpc GetDelegates(GetDelegatesRequest) returns (GetDelegatesResponse);
  rpc GetDelegateProfile(GetDelegateProfileRequest) returns (GetDelegateProfileResponse);

  // GetAllDelegations returns list of delegations based on internal data grouped by dao
  rpc GetAllDelegations(GetAllDelegationsRequest) returns (GetAllDelegationsResponse);
  // GetAllDelegators returns list of delegators based on internal data grouped by dao
  rpc GetAllDelegators(GetAllDelegatorsRequest) returns (GetAllDelegatorsResponse);
  // GetDelegatesSummary returns count of delegators and delegations
  rpc GetDelegatesSummary(GetDelegatesSummaryRequest) returns (GetDelegatesSummaryResponse);
}

message GetDelegatesRequest {
  string dao_id = 1;
  repeated string query_accounts = 2;
  optional string sort = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message GetDelegatesResponse {
  repeated DelegateEntry delegates = 1;
  int32 total = 2;
}

message DelegateEntry {
  string address = 1;
  string ens_name = 2;
  int32 delegator_count = 3;
  double percent_of_delegators = 4; // in basis points
  double voting_power = 5;
  double percent_of_voting_power = 6; // in basis points
  string about = 7;
  string statement = 8;
  int32 votes_count = 9;
  int32 created_proposals_count = 10;
}

message GetDelegateProfileRequest {
  string dao_id = 1;
  string address = 2;
}

message GetDelegateProfileResponse {
  string address = 1;
  double voting_power = 2;
  double incoming_power = 3;
  double outgoing_power = 4;
  double percent_of_voting_power = 5;
  double percent_of_delegators = 6;
  repeated ProfileDelegateItem delegates = 7;
  google.protobuf.Timestamp expiration = 8;
}

message ProfileDelegateItem {
  string address = 1;
  string ens_name = 2;
  double weight = 3;
  double delegated_power = 4;
}

message GetAllDelegationsRequest {
  // The account address that initiates the delegation
  string address = 1;
}

message DelegationDetails {
  // The delegation address
  string address = 1;
  // Resolved ens name
  string ens_name = 2;
  // Percentage of delegation
  int32 percent_of_delegators = 3;
  // Expires at date. If 0 the expiration is not set
  google.protobuf.Timestamp expiration = 4;
}

message DelegationSummary {
  // Dao details
  DaoInfo dao = 1;
  // List of delegations
  repeated DelegationDetails delegations = 2;
}

message GetAllDelegationsResponse {
  // The number of total delegations in our DB
  int32 total_delegations_count = 1;
  // List of delegations grouped by dao and sorted by popularity index
  repeated DelegationSummary delegations = 2;
}

message GetAllDelegatorsRequest {
  // The account address that initiates the delegation
  string address = 1;
}

message DelegatorSummary {
  // Dao details
  DaoInfo dao = 1;
  // List of delegators
  repeated DelegationDetails delegators = 2;
}

message GetAllDelegatorsResponse {
  // The number of total delegators in our DB
  int32 total_delegators_count = 1;
  // List of delegators grouped by dao and sorted by popularity index
  repeated DelegatorSummary delegators = 2;
}

message GetDelegatesSummaryRequest {
  // The account address that initiates the delegation
  string address = 1;
}

message GetDelegatesSummaryResponse {
  // The number of total delegators in our DB
  int32 total_delegators_count = 1;
  // The number of total delegations in our DB
  int32 total_delegations_count = 2;
}
